--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -21,10 +21,10 @@ for you to choose from.
 | Name         | Description | Thumbnail |
 | ------------ | ----------- | ------------------ |
 | [Golden](/?path=/docs/layout-grid--golden#golden) | Inspired by [*The Golden Ratio*](https://www.canva.com/learn/what-is-the-golden-ratio/). A preset to give you a layout that is pleasing to the eye. | Coming soon |
+| [Halves](/?path=/docs/layout-grid--halves#halves) | A two-column grid. | Coming soon |
+| [Thirds](/?path=/docs/layout-grid--thirds#thirds) | A three-column grid. | Coming soon |
+| [Quarters](/?path=/docs/layout-grid--quarters#quarters) | A four-column grid. | Coming soon |
 | [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | Auto-sizing column grid. | Coming soon |
-| Halves | [TODO] A two-column grid. | Coming soon |
-| Thirds | [TODO] A three-column grid. | Coming soon |
-| Quarters | [TODO] A four-column grid. | Coming soon |
 | Scrolling grid | [TODO] A grid that scrolls horizontally on mobile. Useful for holding cards. | Coming soon |
 | [6-8-12](/?path=/docs/layout-grid--twelve-eight-six#6-8-12-grid) | Advanced. The most flexible option. This is an implementation of our base grid (see below). | Coming soon |
 
