Rename reverted package names ("@uq-uidf/*") packages to "@uqds/*"

--- a/packages/storybook-html/src/components/core/core.story.mdx
+++ b/packages/storybook-html/src/components/core/core.story.mdx
@@ -19,12 +19,12 @@ to preprocess your stylesheets. See [getting started](/?path=/docs/introduction-
 
 With NPM:  
 ```shell
-npm i @uq-uidf/core
+npm i @uqds/core
 ```
 
 With Yarn:  
 ```shell
-yarn add @uq-uidf/core
+yarn add @uqds/core
 ```
 
 ### 2. Use (import) the module in your project
@@ -32,7 +32,7 @@ yarn add @uq-uidf/core
 In a SCSS/Sass file:
 
 ```scss
-@use '@uq-uidf/core/src/scss/_global' as core;
+@use '@uqds/core/src/scss/_global' as core;
 
 .example-class {
     ...
