update Storybook Introduction (was Welcome)

--- a/packages/storybook-html/src/docs/introduction/welcome.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/welcome.story.mdx
@@ -1,21 +1,42 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Introduction/Welcome" />
+<Meta title="Introduction/Introduction" />
 
-# Welcome
+# Introduction
 
-A design system unites product teams around a common visual language. It reduces
-design debt, accelerates the design process, and builds bridges between teams
-working in concert to bring products to life.
+The UQ Design System is a guide to how user interfaces should look, feel, behave and be coded at UQ.
 
-## What is a design system?
+It includes a guide to the core styles, components, patterns and standards for UQ user interfaces. 
 
-What it's not and what it is. <a href="#">CDD</a> with Storybook.
+A package of styles and components can be provided on request.
 
-## Who is it for?
+The design system will cover the most common requirements for UI design and development at UQ. Each development project has unique needs, so you may need to adapt or extend what is provided here. If you want to share your work with others, become a contributor.
 
-Who benefits in the business?
+## Status and updates
 
-### Product managers
-### Designers
-### Developers
+The UQ Design system is currently in development and will be ready for production use at the end of 2020. You're welcome to use what we've already created, but please contact us first so we can keep you updated on changes that may affect you.
+
+- Check the status of individual styles and components before using them
+- View [open issues in github](https://github.com/uq-its-ss/design-system/issues)
+- View [recent changes in github](https://github.com/uq-its-ss/design-system/pulls?q=is%3Apr+is%3Aclosed)
+- View [ADS-UI current and upcoming work](https://jira.its.uq.edu.au/jira/secure/RapidBoard.jspa?rapidView=265&view=planning.nodetail&quickFilter=3370) in on the Design System in JIRA (ITS staff only)
+- Join the [Design System community](https://www.yammer.com/uq.edu.au/#/threads/inGroup?type=in_group&feedId=35286523904&view=all) on UQ Yammer for updates.
+
+## Contacts and community
+
+The Design System is managed and supported by the User Interface Design and Development team in ITS Application Development and Support (ADS-UI for short). 
+
+Contact us with questions and feedback via webservices@uq.edu.au or join the [Design System community](https://www.yammer.com/uq.edu.au/#/threads/inGroup?type=in_group&feedId=35286523904&view=all) on UQ Yammer for updates and discussion.
+
+We'd love to come talk to your team about the design system and answer any questions you have.
+
+
+## Contribute
+
+If UQ development teams work together, we can save time and build better. 
+
+Our [GitHub repository](https://github.com/uq-its-ss/design-system) contains all the code and content which make up the design system. 
+
+Contact ADS-UI if you'd like to contribute to the design system. 
+
+
