Restructure the side menu

--- a/packages/storybook-html/src/components/body/body.story.mdx
+++ b/packages/storybook-html/src/components/body/body.story.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Base/Body/Body" />
+<Meta title="Components/Body/Body" />
 
 # Body
 
