--- a/packages/storybook-html/src/docs/introduction/overview.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/overview.story.mdx
@@ -1,8 +1,8 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Introduction/Welcome" />
+<Meta title="Introduction/Overview" />
 
-# Welcome
+# Overview
 
 A design system unites product teams around a common visual language. It reduces
 design debt, accelerates the design process, and builds bridges between teams
