Text and icons - description updates

--- a/packages/storybook-html/src/components/core/apply-colour.story.mdx
+++ b/packages/storybook-html/src/components/core/apply-colour.story.mdx
@@ -94,6 +94,7 @@ Icons should generally be the same colour as any adjacent text
     <ul>
     <li>used to reduce the emphasis of text</li>
     <li>should not be used in isolation but in a supporting role to default text</li>
+    <li>Used where emphasis and contrast is needed, e.g. titles, categories and data</li>
     </ul>
     </td>
   </tr>
@@ -112,7 +113,12 @@ Icons should generally be the same colour as any adjacent text
     <td class="uqds-table__item"><strong class="uqds-text-color--purple">Purple Text</strong> <div class="uqds-colour__palette uqds-colour--purple"></div></td>
     <td class="uqds-table__item" data-title="Name:">Purple text</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
-    <td class="uqds-table__item" data-title="Usage:">Used where emphasis and contrast is needed, e.g. headings, titles</td>
+    <td class="uqds-table__item" data-title="Usage:">
+      <ul>
+        <li>Used for content heading</li>
+        <li>Used where emphasis and contrast is needed, e.g. titles, categories and data</li>
+      </ul>
+    </td>
   </tr>
 
 </tbody>
