--- a/packages/storybook-html/src/components/core/breakpoints.story.mdx
+++ b/packages/storybook-html/src/components/core/breakpoints.story.mdx
@@ -7,39 +7,43 @@ import { Meta } from '@storybook/addon-docs/blocks';
 | Name(s)                 | Constant variable | Default constant | Media query string variables | Default viewport width ranges |
 |-------------------------|-------------------|------------------|------------------------------|-------------------------------|
 | **\* (mobile)**         | N/A | N/A | N/A | 0—∞ |
-| XS                      | $screen-xs | 26rem **(~416px)** | $screen-xs-up,<br/>$screen-xs-down,<br/>$screen-xs-sm | 26rem—∞ **(~416px—∞)**,<br/>0—25.9375rem **(~0—415px)**,<br/>26—33.9375rem **(~416—543px)** |
-| SM                      | $screen-sm | 34rem **(~544px)** | $screen-sm-up,<br/>$screen-sm-down,<br/>$screen-sm-md | 34rem—∞ **(~544px—∞)**,<br/>0—33.9375rem **(~0—543px)**,<br/>34—47.9375rem **(~544—767px)** |
-| **MD (tablet)**         | $screen-md | 48rem **(~768px)** | $screen-md-up,<br/>$screen-md-down,<br/>$screen-md-lg | 48rem—∞ **(~768px—∞)**,<br/>0—47.9375rem **(~0—767px)**,<br/>48—63.9375rem **(~768—1023px)** |
-| LG                      | $screen-lg | 64rem **(~1024px)** | $screen-lg-up,<br/>$screen-lg-down,<br/>$screen-lg-xl | 64rem—∞ **(~1024px—∞)**,<br/>0—63.9375rem **(~0—1023px)**,<br/>64—89.9375rem **(~1024—1439px)** |
-| **XL (desktop/laptop)** | $screen-xl | 90rem **(~1440px)** | $screen-xl-up,<br/>$screen-xl-down | 90rem—∞ **(~1440px—∞)**,<br/>0—89.9375rem **(~0—1439px)** |
+| *Deprecated: XS*        | $screen-xs | 26rem **(~416px)** | $screen-xs-up,<br/>$screen-xs-down,<br/>$screen-xs-sm | 26rem—∞ **(~416px—∞)**,<br/>0—25.9375rem **(~0—415px)**,<br/>26—33.9375rem **(~416—543px)** |
+| *Deprecated: SM*        | $screen-sm | 34rem **(~544px)** | $screen-sm-up,<br/>$screen-sm-down,<br/>$screen-sm-md | 34rem—∞ **(~544px—∞)**,<br/>0—33.9375rem **(~0—543px)**,<br/>34—37.4375rem **(~544—599px)** |
+| **MD (tablet)**         | $screen-md | 37.5rem **(~600px)** | $screen-md-up,<br/>$screen-md-down,<br/>$screen-md-lg | 37.5rem—∞ **(~600px—∞)**,<br/>0—37.4375rem **(~0—599px)**,<br/>37.5—63.9375rem **(~600—1023px)** |
+| *Deprecated: LG*        | $screen-lg | 64rem **(~1024px)** | $screen-lg-up,<br/>$screen-lg-down,<br/>$screen-lg-xl | 64rem—∞ **(~1024px—∞)**,<br/>0—63.9375rem **(~0—1023px)**,<br/>64—74.9375rem **(~1024—1199px)** |
+| **XL (desktop/laptop)** | $screen-xl | 75rem **(~1200px)** | $screen-xl-up,<br/>$screen-xl-down | 75rem—∞ **(~1200px—∞)**,<br/>0—74.9375rem **(~0—1199px)** |
 
 *Pixel units (px) provided are based on the default rem unit analogue of 16px.*
 
 ## Usage
 
-We recommend using the breakpoints in a *mobile-first* pattern. This involves,
-setting styles for the smallest screens first as per the following example.
+We recommend using the breakpoints in a *mobile-first* pattern. The general idea
+is that you set styles for the smallest screens first (e.g. mobile phones) and
+then making the modifications that you need for larger screens. Here's an
+example:
 
 ```scss
-/* custom.scss */
+/* example.scss */
 
 @use '@uqds/core/src/scss/_global' as core;
 
 .example-class {
-  // Target the zero (mobile) breakpoint up
+  // Target the zero (mobile) breakpoint & up
   font-size: core.$font-size-s;
+  padding: core.$space;
+  text-align: center;
 }
 
-@media #{$screen-md-up} {
+@media #{core.$screen-md-up} {
   .example-class {
-    // Target the MD (tablet) breakpoint up
+    // Target the MD (tablet) breakpoint & up
     font-size: core.$font-size-m;
   }
 }
 
-@media #{$screen-xl-up} {
+@media #{core.$screen-xl-up} {
   .example-class {
-    // Target the XL (desktop) breakpoint up
+    // Target the XL (desktop) breakpoint & up
     font-size: core.$font-size-l;
   }
 }
