--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -1,55 +1,58 @@
 import './layout.scss';
 import { Meta, Story } from '@storybook/addon-docs/blocks';
 
-<Meta title="Layout/Layout" parameters={{ layout: "fullscreen", docs: { inlineStories: false } }} />
+<Meta title="Layout/Layout system" parameters={{ layout: "fullscreen", docs: { inlineStories: false } }} />
 
-# Layout
+# Layout system
 
-Our responsive layout system gives you the tools to organise content and UI
-components in a variety of ways. It also adapts to different screen sizes and
-orientation. The primary elements of our layout system are *columns*, *margins*,
-and *gutters* (the ingredients of a *horizontal* grid system). Our unit of
-measurement is the [*rem*](https://www.w3schools.com/cssref/css_units.asp).
+Our responsive layout system defines the way you should organise content and UI
+components on different screen sizes. The primary elements of our layout system
+are *columns*, *margins*, and *gutters* (the schema). Our unit of measurement is
+the [*rem*](https://www.w3schools.com/cssref/css_units.asp). If this sounds a
+bit too abstract, we've got you covered with a couple of basic ways to layout
+your pages.
 
 ## Getting started
 
-To help you compose your pages, we have several options in our layout system
-for you to choose from.
+We recommend that you install the **`@uqds/grid`** package to use our CSS
+grid classes. You can find out more in the following table and the grid
+documentation.
 
-1. **`@uqds/grid`:** general use CSS grid classes.
+| Name         | Description |
+| ------------ | ----------- |
+| [Golden](/?path=/docs/layout-grid--golden#golden) | Inspired by [*The Golden Ratio*](https://www.canva.com/learn/what-is-the-golden-ratio/). A preset to give you a layout that is pleasing to the eye. |
+| [Halves](/?path=/docs/layout-grid--halves#halves) | A two-column grid. |
+| [Thirds](/?path=/docs/layout-grid--thirds#thirds) | A three-column grid. |
+| [Quarters](/?path=/docs/layout-grid--quarters#quarters) | A four-column grid. |
+| [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | Auto-sizing column grid. |
+| Scrolling grid | [TODO] A grid that scrolls horizontally on mobile. Useful for holding cards. |
+| [6-8-12](/?path=/docs/layout-grid--twelve-eight-six#6-8-12-grid) | Advanced. The most flexible option. This is an implementation of our base grid (see below). |
 
-| Name         | Description | Thumbnail |
-| ------------ | ----------- | ------------------ |
-| [Golden](/?path=/docs/layout-grid--golden#golden) | Inspired by [*The Golden Ratio*](https://www.canva.com/learn/what-is-the-golden-ratio/). A preset to give you a layout that is pleasing to the eye. | Coming soon |
-| [Halves](/?path=/docs/layout-grid--halves#halves) | A two-column grid. | Coming soon |
-| [Thirds](/?path=/docs/layout-grid--thirds#thirds) | A three-column grid. | Coming soon |
-| [Quarters](/?path=/docs/layout-grid--quarters#quarters) | A four-column grid. | Coming soon |
-| [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | Auto-sizing column grid. | Coming soon |
-| Scrolling grid | [TODO] A grid that scrolls horizontally on mobile. Useful for holding cards. | Coming soon |
-| [6-8-12](/?path=/docs/layout-grid--twelve-eight-six#6-8-12-grid) | Advanced. The most flexible option. This is an implementation of our base grid (see below). | Coming soon |
+Secondly, we have our **`@uqds/sections`** package; CSS classes that work to
+combine layout and typography. Great for laying out discrete blocks of content,
+e.g. pull quotes, calls to action, landing page sections etc.
 
-2. **`@uqds/sections`:** CSS classes that combine layout and typography. Great
-for laying out discrete blocks of content. We recommend these options for
-situations such as pull quotes, calls to action, landing pages etc.
+---
+
+If you are a designer or just curious about our layout system, please keep
+reading.
 
 ## Our base grid
 
 Our layout system is built upon a 6-8-12 column strategy — our base grid.
 
-### Specifications per breakpoint range
+### Specifications per viewport (width) range
 
-| Name(s)                 | Mockups | Breakpoint range                 | Columns | Margins (minimum) | Gutters        | Max width          |
-|-------------------------|---------|----------------------------------|---------|-------------------|----------------| ------------------ |
-| **\* (mobile)**         | ✓       | 0—25.9375rem **(~0—415px )**     | 6       | 1.5rem (~24px)    | 1rem (~16px)   | Fluid              |
-| XS                      |         | 26—33.9375rem **(~416—543px)**   | ''      | ''                | ''             | ''                 |
-| SM                      |         | 34—47.9375rem **(~544—767px)**   | ''      | ''                | ''             | ''                 |
-| **MD (tablet)**         | ✓       | 48—63.9375rem **(~768—1023px)**  | 8       | 4rem (~64px)      | 1.5rem (~24px) | Fluid              |
-| LG                      |         | 64—89.9375rem **(~1024—1439px)** | ''      | ''                | ''             | ''                 |
-| **XL (desktop/laptop)** | ✓       | 90rem—∞ **(~1440px—∞)**          | 12      | 9.375rem (~150px) | 2rem (~32px)   | 71.25rem (~1140px) |   
+| Name(s)                 | Mockups | Viewport range                    | Columns | Min. left/right margins | Gutters        |
+|-------------------------|---------|-----------------------------------|---------|-------------------------|----------------|
+| **\* (mobile)**         | ✓       | 0—25.9375rem **(~0—415px )**      | 6       | 1.5rem (~24px)          | 1rem (~16px)   |
+| *Deprecated: XS*        |         | 26—33.9375rem **(~416—543px)**    | ''      | ''                      | ''             |
+| *Deprecated: SM*        |         | 34—37.4375rem **(~544—599px)**    | ''      | ''                      | ''             |
+| **MD (tablet)**         | ✓       | 37.5—63.9375rem **(~600—1023px)** | 8       | 4rem (~64px)            | 1.5rem (~24px) |
+| *Deprecated: LG*        |         | 64—74.9375rem **(~1024—1199px)**  | ''      | ''                      | ''             |
+| **XL (desktop/laptop)** | ✓       | 75rem—∞ **(~1200px—∞)**           | 12      | 9.375rem (~150px)       | 2rem (~32px)   |
 
 > Pixel units (px) provided are based on the default rem unit analogue of 16px.
-> Breakpoint ranges refer to [viewport](https://www.w3schools.com/css/css_rwd_viewport.asp)
-> width.
 
 export const BaseLayoutGrid = () => `
   <div class="uqds-base-layout-grid">
@@ -80,24 +83,29 @@ export const BaseLayoutGrid = () => `
 
 ## Designing with the base grid (for UI mockups)
 
-We should prepare mockups for our three major breakpoints: mobile, tablet, and
-desktop/laptop. We recommend creating **375px width artboard mockups for the
-mobile range. For the others, we take the starting value of the range** as our
-artboard width. In some UI design programs (e.g. Figma, Adobe XD), you can
-define a layout grid using the column, margin, and gutter (px) values we've
-supplied. You can also use the following sizing/spacing references.
+Designers should prepare mockups for our three major viewport ranges*: 
+- mobile: using a 375px width artboard,
+- tablet: using a 768px width artboard,
+- and desktop/laptop: using a 1440px artboard.
 
-### Desktop
+> \* Because we are picking just three discrete sizes as standard, as we are
+> implementing the UI elements, we must test the responsiveness in the browser.
 
-![Desktop mockup horizontal grid specs](/images/12-column-horizontal-grid-desktop.png)
+In some UI design programs (e.g. Figma, Adobe XD), you can define a layout grid
+using the column, margin, and gutter (px) values we've supplied. You can also
+use the following sizing/spacing reference images.
+
+### Mobile
+
+![Mobile mockup horizontal grid specs](/images/6-column-horizontal-grid-mobile.png)
 
 ### Tablet
 
 ![Tablet mockup horizontal grid specs](/images/8-column-horizontal-grid-tablet.png)
 
-### Mobile
+### Desktop
 
-![Mobile mockup horizontal grid specs](/images/6-column-horizontal-grid-mobile.png)
+![Desktop mockup horizontal grid specs](/images/12-column-horizontal-grid-desktop.png)
 
 ## Glossary
 
