storybook-html: fix body docs

--- a/packages/storybook-html/src/components/body/body-elements.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-elements.docs.mdx
@@ -4,34 +4,34 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 ## Text block
 <Canvas withSource="none">
-  <Story id="base-body-elements--text-block" />
+  <Story id="components-body-elements--text-block" />
 </Canvas>
 
-## Unordered list
+## Unordered list (`<ul>`)
 <Canvas withSource="none">
-  <Story id="base-body-elements--unordered-list" />
+  <Story id="components-body-elements--unordered-list" />
 </Canvas>
 
-## Ordered list
+## Ordered list (`<ol>`)
 <Canvas withSource="none">
-  <Story id="base-body-elements--ordered-list" />
+  <Story id="components-body-elements--ordered-list" />
 </Canvas>
 
-## Definition list
+## Definition list (`<dl>`)
 <Canvas withSource="none">
-  <Story id="base-body-elements--definition-list" />
+  <Story id="components-body-elements--definition-list" />
 </Canvas>
 
-## Horizontal rule
+## Horizontal rule (`<hr/>`)
 <Canvas withSource="none">
-  <Story id="base-body-elements--horizontal-rule" />
+  <Story id="components-body-elements--horizontal-rule" />
 </Canvas>
 
 ## Video
 
 Coming soon
 
-## Tables
+## Tables (`<table>`)
 <Preview withToolbar>
-  <Story height="400px" id="base-body-elements--table" />
+  <Story height="400px" id="components-body-elements--table" />
 </Preview>
