--- a/packages/storybook-html/src/components/body/body.story.mdx
+++ b/packages/storybook-html/src/components/body/body.story.mdx
@@ -4,6 +4,9 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 # Body
 
+The `@uqds/body` package provides basic HTML element style rules and utility
+classes.
+
 ## Install as a dependency
 
 ```bash
